NEW IN VERSION 1.95.2

- Nodes can be given symbolic names (new commands 'name' and 'anon').

NEW IN VERSION 1.95.1

- Allow ranges of indices and multiple discrete indices to be given as the
  final path component in contexts where multiple nodes can be specified.

NEW IN VERSION 1.4.1

- Fix TDL_LIST_MONOCHROME
- Output without colours if stdout is not a terminal
- Install manpage compressed and create links from other shortcuts to it
- Don't include -g amongst default CFLAGS

NEW IN VERSION 1.4

- Add more intelligent configure script
- Support rl_completion_matches (replaces completion_matches in newer readline
  libraries)
- Add "defer" command
- Remove start-time editing from "edit" command
- Bug fix : bad path expression with postpone used to segfault
- Bug fix : completion always matched on 3 characters of command instead
  of per-command length (broke completion for 'ls')
- Copy permissions of old database to new database when saving
- Ask user for confirmation before acting on "quit" command

NEW IN VERSION 1.3.1

- Bug fix : widen without doing narrow first segfaults
- Spec file fix for mandir
- Updated manpage

NEW IN VERSION 1.3

- Added "save" command
- Added "delete", "ls" and "revert" commands.
- Added "narrow" and "widen" commands
- Improvements to tdl.spec (e.g. so that SRPM construction works properly).

NEW IN VERSION 1.2

- Fix bug : priority with no args core dumped.

- Bring tdl.1 manpage up to date with texinfo.

- Give option to use ncurses instead of termcap in Makefile.

NEW IN VERSION 1.1

- Add 'interactive' mode to complement command line mode of v1.0.  If built
  with GNU realine, the new mode has better help, completion facilities etc.

- Add postpone and (re-)open commands (long-term deferral of tasks)

- Add clone and copyto commands (deep copy parts of the tree)

- For 'report', enclose text for parent entries in [[,]] brackets if the parent
  it not itself 'done'.

- Extensions to 'list' command: