@@ -1,5 +1,5 @@
 /*
-   $Header: /cvs/src/tdl/main.c,v 1.42 2003/08/06 23:23:00 richard Exp $
+   $Header: /cvs/src/tdl/main.c,v 1.43 2003/08/18 23:02:55 richard Exp $
   
    tdl - A console program for managing to-do lists
    Copyright (C) 2001-2003  Richard P. Curnow
@@ -29,6 +29,7 @@
 #include <sys/stat.h>
 #include <unistd.h>
 #include <signal.h>
+#include <sys/utsname.h>
 
 /* The name of the database file (in whichever directory it may be) */
 #define DBNAME ".tdldb"
@@ -47,6 +48,8 @@ static int is_loaded = 0;
 
 /* Version of working database */
 static int current_db_version = 0;
+
+static char *lock_file_name = NULL;
 
 /* Flag if currently loaded database has been changed and needs writing back to
  * the filesystem */
@@ -70,6 +73,76 @@ static void set_descendent_priority(struct node *x, enum Priority priority)/*{{{
 /* This will be variable eventually */
 static char default_database_path[] = "./" DBNAME;
 
+static void unlock_database(void)/*{{{*/
+{
+  if (lock_file_name) unlink(lock_file_name);
+  return;
+}
+/*}}}*/
+static volatile void unlock_and_exit(int code)/*{{{*/
+{
+  unlock_database();
+  exit(code);
+}
+/*}}}*/
+static void lock_database(char *path)/*{{{*/
+{
+  struct utsname uu;
+  int pid;
+  int len;
+  char *tname;
+  struct stat sb;
+  FILE *out;
+  
+  if (uname(&uu) < 0) {
+    perror("uname");
+    exit(1);
+  }
+  pid = getpid();
+  len = 1 + strlen(path) + 5;
+  lock_file_name = new_array(char, len);
+  sprintf(lock_file_name, "%s.lock", path);
+  len += strlen(uu.nodename) + 6;
+  tname = new_array(char, len);
+  sprintf(tname, "%s.%d.%s", lock_file_name, pid, uu.nodename);
+  out = fopen(tname, "w");
+  if (!out) {
+    fprintf(stderr, "Cannot open lock file %s for writing\n", tname);
+    exit(1);
+  }
+  fprintf(out, "%d,%s\n", pid, uu.nodename);
+  fclose(out);
+
+  if (link(tname, lock_file_name) < 0) {
+    /* check if link count==2 */
+    if (stat(tname, &sb) < 0) {
+      fprintf(stderr, "Could not stat the lock file\n");
+      unlink(tname);
+      exit(1);
+    } else {
+      if (sb.st_nlink != 2) {
+        FILE *in;
+        in = fopen(lock_file_name, "r");
+        if (in) {
+          char line[2048];
+          fgets(line, sizeof(line), in);
+          line[strlen(line)-1] = 0; /* strip trailing newline */
+          fprintf(stderr, "Database appears to be locked by (pid,node)=(%s)\n", line);
+          unlink(tname);
+          exit(1);
+        }
+      } else {
+        /* lock succeeded apparently */
+      }
+    }
+  } else {
+    /* lock succeeded apparently */
+  }
+  unlink(tname);
+  free(tname);
+  return;
+}
+/*}}}*/
 static char *get_database_path(int traverse_up)/*{{{*/
 {
   char *env_var;
@@ -96,7 +169,7 @@ static char *get_database_path(int traverse_up)/*{{{*/
           orig_cwd = grow_array(char, orig_size, orig_cwd);
         } else {
           fprintf(stderr, "Unexpected error reading current directory\n");
-          exit(1);
+          unlock_and_exit(1);
         }
       }
     } while (!result);
@@ -180,6 +253,7 @@ static void load_database(char *path) /*{{{*/
 {
   FILE *in;
   currently_dirty = 0;
+  lock_database(path);
   in = fopen(path, "rb");
   if (in) {
     /* Database may not exist, e.g. if the program has never been run before.
@@ -241,14 +315,14 @@ static void save_database(char *path)/*{{{*/
     if (out_fd < 0) {
       fprintf(stderr, "Could not open new database %s for writing : %s\n",
               path, strerror(errno));
-      exit(1);
+      unlock_and_exit(1);
     } else {
       /* Normal case */
       out = fdopen(out_fd, "wb");
     }
     if (!out) {
       fprintf(stderr, "Cannot open database %s for writing\n", path);
-      exit(1);
+      unlock_and_exit(1);
     }
     write_database(out, &top, current_db_version);
     fclose(out);
@@ -451,7 +525,8 @@ static int process_exit(char **x)/*{{{*/
 {
   save_database(current_database_path);
   free_database(&top);
-  exit(0);
+  unlock_and_exit(0);
+  return 0; /* moot */
 }
 /*}}}*/
 static int process_quit(char **x)/*{{{*/
@@ -469,7 +544,8 @@ static int process_quit(char **x)/*{{{*/
     }
   }
   free_database(&top);
-  exit(0);
+  unlock_and_exit(0);
+  return 0; /* moot */
 }
 /*}}}*/
 static int process_save(char **x)/*{{{*/
@@ -556,7 +632,7 @@ static void guarded_sigaction(int signum, struct sigaction *sa)/*{{{*/
 {
   if (sigaction(signum, sa, NULL) < 0) {
     perror("sigaction");
-    exit(1);
+    unlock_and_exit(1);
   }
 }
 /*}}}*/
@@ -565,7 +641,7 @@ static void setup_signals(void)/*{{{*/
   struct sigaction sa;
   if (sigemptyset(&sa.sa_mask) < 0) {
     perror("sigemptyset");
-    exit(1);
+    unlock_and_exit(1);
   }
   sa.sa_handler = handle_signal;
   sa.sa_flags = 0;
@@ -596,7 +672,7 @@ void dispatch(char **argv) /* and other args *//*{{{*/
 
   if (was_signalled) {
     save_database(current_database_path);
-    exit(0);
+    unlock_and_exit(0);
   }
 
   executable = executable_name(argv[0]);
@@ -649,7 +725,7 @@ void dispatch(char **argv) /* and other args *//*{{{*/
     /* Check for failure */
     if (result < 0) {
       if (!is_interactive) {
-        exit(-result);
+        unlock_and_exit(-result);
       }
 
       /* If interactive, the handling function has emitted its error message.
@@ -665,12 +741,14 @@ void dispatch(char **argv) /* and other args *//*{{{*/
     is_processing = 0;
     if (was_signalled) {
       save_database(current_database_path);
-      exit(0);
+      unlock_and_exit(0);
     }
     
   } else {
     fprintf(stderr, "Unknown command <%s>\n", argv[1]);
-    if (!is_interactive) exit(1);
+    if (!is_interactive) {
+      unlock_and_exit(1);
+    }
   }
   
 }
@@ -773,7 +851,8 @@ int main (int argc, char **argv)
 
   save_database(current_database_path);
   free_database(&top);
-  return 0;
+  unlock_and_exit(0);
+  return 0; /* moot */
 }
 /*}}}*/
 
